min-width image section first y second mobile

--- a/01 - layout/reto/src/assets/css/styles.scss
+++ b/01 - layout/reto/src/assets/css/styles.scss
@@ -127,6 +127,15 @@ main{
                 min-width: 225px;
             }
         }
+
+        & .first, & .second{
+            & .item{
+                & img{
+                    min-width: 250px;
+                }
+            }
+    
+        }
     }
     
 }
