--- a/01 - layout/reto/src/assets/css/styles.css
+++ b/01 - layout/reto/src/assets/css/styles.css
@@ -107,4 +107,7 @@ main .first .item img:hover, main .second .item img:hover {
   main .top .top-item img {
     min-width: 225px;
   }
+  main .first .item img, main .second .item img {
+    min-width: 250px;
+  }
 }/*# sourceMappingURL=styles.css.map */
