--- a/04-frameworks/angular/basico/src/app/layout/privatemenu/privatemenu.component.html
+++ b/04-frameworks/angular/basico/src/app/layout/privatemenu/privatemenu.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="accent">  
-    <a routerLink="dashboard" mat-button>Dashboard</a>  <a routerLink="gallery" mat-button>Galeria</a> <a routerLink="crud" mat-button>CRUD</a>  
-    <a routerLink="profile" mat-button>Profile</a>  <a (click)="logout()" mat-button>Logout</a>
+<mat-toolbar color="accent" class="private-menu-buttons">  
+    <div><a routerLink="dashboard" mat-button>Dashboard</a>  <a routerLink="gallery" mat-button>Galeria</a> <a routerLink="crud" mat-button>CRUD</a>  
+    <a routerLink="profile" mat-button>Profile</a></div>  <div><a (click)="logout()" mat-raised-button>Logout</a></div>
     
 </mat-toolbar>
