--- a/04-frameworks/angular/basico/src/app/layout/publicmenu/publicmenu.component.html
+++ b/04-frameworks/angular/basico/src/app/layout/publicmenu/publicmenu.component.html
@@ -1,1 +1,4 @@
-<mat-toolbar color="accent">  <a routerLink="/" mat-button>Home</a>  <a routerLink="/about" mat-button>About</a>  <a routerLink="/login" mat-button>Login</a></mat-toolbar>
+<mat-toolbar color="accent" class="public-menu-buttons">  
+    <div><a routerLink="/" mat-button>Home</a>  <a routerLink="/about" mat-button>About</a></div>  
+    <div><a routerLink="/login"  mat-raised-button>Login</a></div>
+</mat-toolbar>
